--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "python.pythonPath": "C:\\tools\\Python37-32\\python.exe",
-    "editor.fontSize": 20
+    "python.pythonPath": "C:\\Users\\arautela\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe",
+    "editor.fontSize": 20,
+    "python.linting.pylintEnabled": false
 }
